--- a/src/components/session/session.module.css
+++ b/src/components/session/session.module.css
@@ -7,6 +7,10 @@
   background-color: #f9f9f9;
 }
 
+.currentSession {
+  background-color: yellow;
+}
+
 .heading {
   text-align: center;
   font-size: 1.5em;
