--- a/src/pages/addTimetable/addTimetable.module.css
+++ b/src/pages/addTimetable/addTimetable.module.css
@@ -1,16 +1,8 @@
-/* AddTimetableForm.module.css */
 .formContainer {
-  margin: 20px;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #f9f9f9;
-}
-
-.heading {
-  text-align: center;
-  font-size: 1.5em;
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  margin: 50px auto 50px auto;
 }
 
 .field {
@@ -31,69 +23,8 @@
   border-radius: 4px;
 }
 
-.addButton {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 15px;
-  margin: 10px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.addButton:hover {
-  background-color: #45a049;
-}
-
 .submitButton {
-  background-color: #008cba;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.submitButton:hover {
-  background-color: #007bb5;
-}
-
-.sessionList {
-  list-style-type: none;
-  padding: 0;
-}
-
-.sessionItem {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
-}
-
-.editButton {
-  background-color: #ff9800;
-  color: white;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-right: 5px;
-}
-
-.editButton:hover {
-  background-color: #e68a00;
-}
-
-.deleteButton {
-  background-color: #f44336;
-  color: white;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.deleteButton:hover {
-  background-color: #d32f2f;
+  padding: 10px 24px;
+  background-color: antiquewhite;
+  border-radius: 5px;
 }
