feat: sessions api correction

--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,33 @@
   --mobile-container-width: 90%;
   --letter-spacing: 1.5px;
 }
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #cfcfcf;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #007bff;
+    border-radius: 100vh;
+    border: 0px solid black;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #e0cbcb;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+}
